<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tli_6.prathamapp.activities.ProfileActivity">
   <!-- <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/profile"
        android:textSize="30sp"
        android:textStyle="bold" />-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/name_txt"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobile_number"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/mobile_number_txt"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unit"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/unit_txt"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_unit"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/sub_unit_txt"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/state_txt"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mob_center"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/mob_center_txt"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/loc_tit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/loc_txt"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/coord_tit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coordinator"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/coordinator_txt"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/pos_tit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/position"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/position_txt"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appointment_date"
                android:id="@+id/appoint_tit"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/app_date_txt"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registeration_date"
                android:id="@+id/reg_tit"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/reg_date_txt"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
