<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.tli_6.prathamapp.activities.StudentDetailsActivity">
   <!-- <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/std_act"/>-->
    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mob_code"
        />
    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
       android:enabled="false"
        android:id="@+id/mcode_txt"/>
    <TextView
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_no"/>
    <EditText
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sender_edt"/>
            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Village Pin code"/>
            <EditText
                android:layout_marginTop="10dp"
                android:inputType="number"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/village_pin"/>
    <TextView
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/village"/>
    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/village_edt"/>
    <TextView
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/std_name"/>
    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/std_name_edt"/>
    <TextView
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/program_code"/>
   <Spinner
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/pro_code_spnr"
       android:layout_marginTop="10dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rojar_txt"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:text="@string/rojgar"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/rojar_chbx"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <Button
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit_mob_actvy"
        style="?android:textAppearanceSmall"
        android:text="@string/submit"/>
            </LinearLayout>
    </ScrollView>
</LinearLayout>
