<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tli_6.prathamapp.activities.MainMenuActivity">

    <ScrollView
        android:id="@+id/scrll"
        android:layout_marginTop="30dp"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.95"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp">

            <View
                android:layout_width="fill_parent"
                android:layout_height="10dp" />
            <Button
                android:id="@+id/student_act_butt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/student_details"

                android:textSize="21sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="5dp"
                android:id="@+id/get_forms_spacer4" />

            <Button
                android:id="@+id/mob_act_butt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/mobiliser_acvty"

                android:textSize="21sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="5dp"
                android:id="@+id/review_spacer" />
            <Button
                android:id="@+id/std_his_butt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/student_history"

                android:textSize="21sp" />


            <View
                android:layout_width="fill_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/mob_his_butt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/mob_act_history"

                android:textSize="21sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
